add scholar icon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
-   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"> -->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -65,9 +65,9 @@
             <div class="row">
                 <div class="col-sm-5 social">
                     <ul>
-                       <!-- <li>
+                        <li>
                             <a href="https://scholar.google.com/citations?user=S0mkMLUAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar"  style="color:white"></i></a>
-                        </li> -->
+                        </li>
                         <li>
                             <a href="https://github.com/paarthbir77" target="_blank"><i class="fa fa-github" aria-hidden="true" style="color:white"></i></a>
                         </li>
@@ -359,10 +359,10 @@
             </div>
             <div class="col-sm-5 social">
                 <ul>
-                   <!-- <li>
+                    <li>
                         <a href="https://
 .google.com/citations?user=S0mkMLUAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar"></i></a>
-                    </li> -->
+                    </li> 
                     <li>
                         <a href="https://github.com/paarthbir77" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                     </li>
