update url and info

--- a/index.html
+++ b/index.html
@@ -127,13 +127,6 @@
             <ul>
                 <li>Working as lead developer on application to onboard clients into Societe Generale Securities Services. Application acts as upstream to multiple applications and is used by middle
                     and back offices.</li>
-                <li>Migrated workflow to manage the flow of instructions(forms) from an external tool to in-application. Reduced flow related incidents to 0</li>
-                <li>Merged related instructions to a combined single instruction based on business rules. Reduced middle and back office efforts by 50%.</li>
-                <li>Developed API to get form data from a centralized datasource. The API then serves the collected information to the main application to
-                    populate fields in the form. Improved performance over previous approach by nearly 30%</li>
-                <li>Developed API to automatically create a new form with pre-populated client data obtained from an external application.</li>
-                <li>Developed API to automate transfer of data to a downstream application, which was being done manually prior to the project.</li>
-                <li>Working in an Agile system and delivering business and functional enhancements to application. Also responsible for incident management.</li>
                 <li>Project Techstack: Java, JSP, Springboot framework, Telosys framework, PostgreSQL, JUnit, Git</li>
             </ul>
         </div>
@@ -141,8 +134,8 @@
             <h3>Toshiba India Pvt. Ltd.</h3>
             <h4>Software Developer Intern in Computer Vision</h4>
             <p>
-                Feature point matching and Simultaneous Localization and Mapping with AKAZE and SOFT-SLAM using camera based sensors. Developed
-                POC to compare performance with existing approaches.
+                Feature point matching and Simultaneous Localization and Mapping with AKAZE and SOFT-SLAM using a stereo camera setup. Developed
+                POC to run on a proprietary accelerator.
             </p>
         </div>
 
@@ -360,8 +353,7 @@
             <div class="col-sm-5 social">
                 <ul>
                     <li>
-                        <a href="https://
-.google.com/citations?user=S0mkMLUAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar"></i></a>
+                        <a href="https://scholar.google.com/citations?user=S0mkMLUAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar"></i></a>
                     </li> 
                     <li>
                         <a href="https://github.com/paarthbir77" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
