--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
             </div>
             <div class="col-md-8">
                 <p>
-                    Former undergraduate from Malaviya National Institute of Technology(MNIT) interested in the application of Computer Vision and Deep Learning in healthcare.
-                    Also interested in Android Application Development. Currently working at Société Générale as a Software Engineer.
+                    Currently a graduate student at the Department of Electrical and Computer Engineering at the University of Waterloo.
+                    Full-Stack Software Engineer adept in Java, Spring Boot, and PostgreSQL. Passionate about building scalable solutions that drive business objectives. Skilled in both front-end and back-end development, with a commitment to delivering high-quality code.
+                    Seeking opportunities to grow as a developer while making meaningful contributions to impactful projects.
                 </p>
             </div>
         </div>
@@ -121,13 +122,13 @@
 <div id="experience" class="background-alt">
     <h2 class="heading">Experience</h2>
     <div id="experience-timeline">
-        <div data-date="June 2021 – Present">
+        <div data-date="June 2021 – July 2023">
             <h3>Societe Generale</h3>
-            <h4>Software Engineer</h4>
+            <h4>Full Stack Software Engineer</h4>
             <ul>
-                <li>Working as lead developer on application to onboard clients into Societe Generale Securities Services. Application acts as upstream to multiple applications and is used by middle
-                    and back offices.</li>
-                <li>Project Techstack: Java, JSP, Springboot framework, Telosys framework, PostgreSQL, JUnit, Git</li>
+                <li>Worked on application to onboard clients into Societe Generale Securities Services. Application acted as upstream to multiple applications, and was used by middle and back offices</li>
+                <li>Worked in an Agile system and delivered business and functional enhancements to application. Also responsible for incident management.</li>
+                <li>Project Techstack: Java, JSP, Springboot framework, Telosys framework, PostgreSQL, Kubernetes, JUnit, Git, REST APIs</li>
             </ul>
         </div>
         <div data-date="May 2020 – October 2020">
@@ -145,12 +146,14 @@
 <div id="education">
     <h2 class="heading">Education</h2>
     <div class="education-block">
-        <h3>MNIT Jaipur</h3>
+        <h3>University of Waterloo</h3>
+        <span class="education-date">2023 - 2024</span>
+        <h4>Master of Engineering in Electrical and Computer Engineering</h4>
+    </div>
+    <div class="education-block">
+        <h3>Malaviya National Institute of Technology, Jaipur</h3>
         <span class="education-date">2017 - 2021</span>
         <h4>Bachelor of Technology in Electronics and Communication Engineering</h4>
-        <p>
-            CGPA: 8.24
-        </p>
     </div>
     <h2 class="heading">CourseWork</h2>
 
@@ -158,16 +161,28 @@
         <h3>University</h3>
         <h4> </h4>
         <ul>
-            <li> Data Structures and Algorithms</li>
-            <li> Graph Theory</li>
-            <li> Probabilistic Methods in Signals & Systems</li>
-            <li> Operating Systems</li>
-            <li> Digital Signal Processing</li>
-            <li> Computer Architecture </li>
-            <li> Computer Networks </li>
-            <li> Artificial Intelligence and Expert Systems </li>
-            <li> Neural Networks </li>
-            <li> Advanced Signal Processing </li>
+            <li>University of Waterloo</li>
+            <ul>
+                <li>Algorithm Design and Analysis</li>
+                <li>Methods and Tools for Software Engineering</li>
+                <li>Foundations of Software Engineering</li>
+                <li>Data and Knowledge Modelling and Analysis</li>
+                <li>Tools of Inteligent System Design</li>
+                <li>Data Analysis and Management</li>
+            </ul>
+            <li>Malaviya National Institute of Technology</li>
+            <ul>
+                <li> Data Structures and Algorithms ()</li>
+                <li> Graph Theory</li>
+                <li> Probabilistic Methods in Signals & Systems</li>
+                <li> Operating Systems</li>
+                <li> Digital Signal Processing</li>
+                <li> Computer Architecture </li>
+                <li> Computer Networks </li>
+                <li> Artificial Intelligence and Expert Systems </li>
+                <li> Neural Networks </li>
+                <li> Advanced Signal Processing </li>
+            </ul>
         </ul>
     </div>
     <!-- End .education-block -->
