--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     <div id="experience-timeline">
         <div data-date="October 2017 – May 2021">
             <h3>Zine Robotics and Research</h3>
+            <h4>Team Member</h4>
             <ul>
                 <li>Conducted a 9 day robotics workshop for 300+ students. Taught lectures and hands-on classes on Integrated Circuits, Microcontrollers, Electronics and Electrical Engineering, and Android Application Development.</li>
                 <li>Responsible for organizing and managing operations of the group for activities like robotics competitions and hackathons.</li>
@@ -160,7 +161,7 @@
         </div>
 
     </div>
-</div>
+</div>    
 <!-- End #community -->
     
 <div id="education" class="background-alt">
