--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     
 <div id="community" class="background-alt">
     <h2 class="heading">Community</h2>
-    <div id="experience-timeline">
+    <div id="community-timeline">
         <div data-date="October 2017 – May 2021">
             <h3>Zine Robotics and Research</h3>
             <h4>Team Member</h4>
@@ -166,7 +166,7 @@
     
 <div id="education" class="background-alt">
     <h2 class="heading">Education</h2>
-    <div id="experience-timeline">
+    <div id="education-timeline">
         <div data-date="2023 - 2024">
             <h3>University of Waterloo</h3>
             <h4>Master of Engineering in Electrical and Computer Engineering</h4>
