--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@
     
 <div id="community" class="background-alt">
     <h2 class="heading">Community</h2>
-    <div id="community-timeline">
+    <div id="experience-timeline">
         <div data-date="October 2017 – May 2021">
             <h3>Zine Robotics and Research</h3>
-            <h4>Team Member</h4>
             <ul>
                 <li>Conducted a 9 day robotics workshop for 300+ students. Taught lectures and hands-on classes on Integrated Circuits, Microcontrollers, Electronics and Electrical Engineering, and Android Application Development.</li>
                 <li>Responsible for organizing and managing operations of the group for activities like robotics competitions and hackathons.</li>
@@ -161,12 +160,12 @@
         </div>
 
     </div>
-</div>    
+</div>
 <!-- End #community -->
     
 <div id="education" class="background-alt">
     <h2 class="heading">Education</h2>
-    <div id="education-timeline">
+    <div id="experience-timeline">
         <div data-date="2023 - 2024">
             <h3>University of Waterloo</h3>
             <h4>Master of Engineering in Electrical and Computer Engineering</h4>
