--- a/index.html
+++ b/index.html
@@ -163,18 +163,17 @@
 </div>
 <!-- End #community -->
     
-<div id="education" class="background-alt">
+<div id="education">
     <h2 class="heading">Education</h2>
-    <div id="experience-timeline">
-        <div data-date="2023 - 2024">
-            <h3>University of Waterloo</h3>
-            <h4>Master of Engineering in Electrical and Computer Engineering</h4>
-        </div>
-        <div data-date="2017 - 2021">
-            <h3>Malaviya National Institute of Technology, Jaipur</h3>
-            <h4>Bachelor of Technology in Electronics and Communication Engineering</h4>
-        </div>
-
+    <div class="education-block">
+        <h3>University of Waterloo</h3>
+        <span class="education-date">2023 - 2024</span>
+        <h4>Master of Engineering in Electrical and Computer Engineering</h4>
+    </div>
+    <div class="education-block">
+        <h3>Malaviya National Institute of Technology, Jaipur</h3>
+        <span class="education-date">2017 - 2021</span>
+        <h4>Bachelor of Technology in Electronics and Communication Engineering</h4>
     </div>
     
     <h2 class="heading">CourseWork</h2>
