--- a/index.html
+++ b/index.html
@@ -146,19 +146,16 @@
 </div>
 <!-- End #experience -->
     
-<div id="community" class="background-alt">
+<div id="community">
     <h2 class="heading">Community</h2>
-    <div id="experience-timeline">
-        <div data-date="October 2017 – May 2021">
-            <h3>Zine Robotics and Research</h3>
-            <ul>
-                <li>Conducted a 9 day robotics workshop for 300+ students. Taught lectures and hands-on classes on Integrated Circuits, Microcontrollers, Electronics and Electrical Engineering, and Android Application Development.</li>
-                <li>Responsible for organizing and managing operations of the group for activities like robotics competitions and hackathons.</li>
-                <li>Developed android application with Material Design using open source libraries for Zine- Robotics and Research Group.</li>
-                <li>Wrote blogs on Medium with over 45,000 views related to Computer Vision with Machine Learning.</li>
-            </ul>
-        </div>
-
+    <div class="education-block">
+        <h3>Zine Robotics and Research</h3>    
+        <ul>
+            <li>Conducted a 9 day robotics workshop for 300+ students. Taught lectures and hands-on classes on Integrated Circuits, Microcontrollers, Electronics and Electrical Engineering, and Android Application Development.</li>
+            <li>Responsible for organizing and managing operations of the group for activities like robotics competitions and hackathons.</li>    
+            <li>Developed android application with Material Design using open source libraries for Zine- Robotics and Research Group.</li>
+            <li>Wrote blogs on Medium with over 45,000 views related to Computer Vision with Machine Learning.</li>
+        </ul>
     </div>
 </div>
 <!-- End #community -->
