--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </div>
 <!-- End #about -->
 
-<div id="experience" class="background-alt">
+<div id="experience">
     <h2 class="heading">Experience</h2>
     <div id="experience-timeline">
         <div data-date="June 2021 – July 2023">
@@ -223,7 +223,7 @@
 
 <!-- End #education -->
 
-<div id="projects" class="background-alt">
+<div id="projects">
     <h2 class="heading">Projects</h2>
     <div class="container">
         <div class="row">
@@ -294,7 +294,7 @@
     </div>
 </div>
 <!-- End #projects -->
-<div id="publications" class="background-alt">
+<div id="publications">
     <h2 class="heading">Publications</h2>
     <div class="container">
         <div class="row">
