--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     
 <div id="community">
     <h2 class="heading">Community</h2>
-    <div>
+    <div class="container row">
         <h3>Zine Robotics and Research</h3>    
         <ul>
             <li>Conducted a 9 day robotics workshop for 300+ students. Taught lectures and hands-on classes on Integrated Circuits, Microcontrollers, Electronics and Electrical Engineering, and Android Application Development.</li>
