--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
             <a href="#experience">Experience</a>
         </li>
         <li>
-            <a href="#community">Community</a>
-        </li>
-        <li>
             <a href="#education">Education</a>
         </li>
         <li>
@@ -141,24 +138,20 @@
                 POC to run on a proprietary accelerator.
             </p>
         </div>
+        <div data-date="October 2017 – May 2021">
+            <h3>Zine Robotics and Research</h3>
+            <h4>Team Member</h4>
+            <ul>
+                <li>Conducted a 9 day robotics workshop for 300+ students. Taught lectures and hands-on classes on Integrated Circuits, Microcontrollers, Electronics and Electrical Engineering, and Android Application Development.</li>
+                <li>Responsible for organizing and managing operations of the group for activities like robotics competitions and hackathons.</li>    
+                <li>Developed android application with Material Design using open source libraries for Zine- Robotics and Research Group.</li>
+                <li>Wrote blogs on Medium with over 45,000 views related to Computer Vision with Machine Learning.</li>
+            </ul>
+        </div>
 
     </div>
 </div>
 <!-- End #experience -->
-    
-<div id="community">
-    <h2 class="heading">Community</h2>
-    <div class="container row">
-        <h3>Zine Robotics and Research</h3>    
-        <ul>
-            <li>Conducted a 9 day robotics workshop for 300+ students. Taught lectures and hands-on classes on Integrated Circuits, Microcontrollers, Electronics and Electrical Engineering, and Android Application Development.</li>
-            <li>Responsible for organizing and managing operations of the group for activities like robotics competitions and hackathons.</li>    
-            <li>Developed android application with Material Design using open source libraries for Zine- Robotics and Research Group.</li>
-            <li>Wrote blogs on Medium with over 45,000 views related to Computer Vision with Machine Learning.</li>
-        </ul>
-    </div>
-</div>
-<!-- End #community -->
     
 <div id="education">
     <h2 class="heading">Education</h2>
