--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
         <div data-date="May 2020 – October 2020">
             <h3>Toshiba India Pvt. Ltd.</h3>
             <h4>Software Developer Intern in Computer Vision</h4>
-            <p>
-                Feature point matching and Simultaneous Localization and Mapping with AKAZE and SOFT-SLAM using a stereo camera setup. Developed
-                POC to run on a proprietary accelerator.
-            </p>
+            <ul>
+                <li>Feature point matching and Simultaneous Localization and Mapping with AKAZE and SOFT-SLAM using a stereo camera setup.</li>
+                <li>Developed POC to run on a proprietary accelerator.</li>
+            </ul>
         </div>
         <div data-date="October 2017 – May 2021">
             <h3>Zine Robotics and Research</h3>
