--- a/index.html
+++ b/index.html
@@ -220,6 +220,23 @@
     <h2 class="heading">Projects</h2>
     <div class="container">
         <div class="row">
+            
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <img src="images/connect.png" />
+                </div>
+                <!-- End .project-image -->
+                <div class="project-info">
+                    <h3>CONNECT Web Application</h3>
+                    <p>
+                        Spring Boot based application designed to encourage productivity and meaningful connections among its users.
+                        Implemented functionality related to user accounts, posts and activities to replicate social media. Implemented groups and leaderboards to encourage collaboration and competition.
+                    </p>
+                    <a href="https://github.com/connect-application">View Project</a>
+                </div>
+                <!-- End .project-info -->
+            </div>
+            
             <div class="project shadow-large no-image">
                 <div class="project-info">
                     <h3>Human Activity Recognition</h3>
