--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             
             <div class="project shadow-large">
                 <div class="project-image">
-                    <img src="images/connect.png" />
+                    <img src="images/connect.png" style="max-width: 100%; height: auto;" />
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
