--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
         <div class="row">
             
             <div class="project shadow-large">
-                <div class="project-image">
+                <div class="project-image" style="flex: 0 0 auto;">
                     <img src="images/connect.png" style="max-width: 100%; height: auto;" />
                 </div>
                 <!-- End .project-image -->
-                <div class="project-info">
+                <div class="project-info" style="flex: 1;">
                     <h3>CONNECT Web Application</h3>
                     <p>
                         Spring Boot based application designed to encourage productivity and meaningful connections among its users.
