--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
     <div class="container">
         <div class="row">
             
-            <div class="project shadow-large">
-                <div class="project-image" style="flex: 0 0 auto;">
-                    <img src="images/connect.png" style="max-width: 100%; height: auto;" />
+            <div class="project shadow-large" style="display: flex;">
+                <div class="project-image" style="flex: 0 0 auto; margin-right: 20px;">
+                    <img src="images/connect.png" style="max-width: 100%; height: auto; display: block;" />
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info" style="flex: 1;">
