--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 <!-- End #education -->
 
-<div id="projects">
+<div id="projects" style = "text-align: justify;">
     <h2 class="heading">Projects</h2>
     <div class="container">
         <div class="row">
