--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="row">
             
             <div class="project shadow-large" style="display: flex;">
-                <div class="project-image" style="flex: 0 0 auto; margin-right: 20px;">
+                <div class="project-image" style="flex: 0 0 auto; margin-right: 20px;overflow:hidden;">
                     <img src="images/connect.png" style="max-width: 100%; height: auto; display: block;" />
                 </div>
                 <!-- End .project-image -->
@@ -304,7 +304,7 @@
     </div>
 </div>
 <!-- End #projects -->
-<div id="publications">
+<div id="publications" style = "text-align: justify;">
     <h2 class="heading">Publications</h2>
     <div class="container">
         <div class="row">
