--- a/index.html
+++ b/index.html
@@ -216,19 +216,19 @@
 
 <!-- End #education -->
 
-<div id="projects" style = "text-align: justify;">
+<div id="projects" ">
     <h2 class="heading">Projects</h2>
     <div class="container">
         <div class="row">
             
-            <div class="project shadow-large" style="display: flex;">
-                <div class="project-image" style="flex: 0 0 auto; margin-right: 20px;overflow:hidden;">
-                    <img src="images/connect.png" style="max-width: 100%; height: auto; display: block;" />
+            <div class="project shadow-large">
+                <div class="project-image" style="margin-right: 20px; ">
+                    <img src="images/connect.png" style="height: auto; width: 100px;" />
                 </div>
                 <!-- End .project-image -->
-                <div class="project-info" style="flex: 1;">
+                <div class="project-info">
                     <h3>CONNECT Web Application</h3>
-                    <p>
+                    <p style = "text-align: justify;>
                         Spring Boot based application designed to encourage productivity and meaningful connections among its users.
                         Implemented functionality related to user accounts, posts and activities to replicate social media. Implemented groups and leaderboards to encourage collaboration and competition.
                     </p>
@@ -240,7 +240,7 @@
             <div class="project shadow-large no-image">
                 <div class="project-info">
                     <h3>Human Activity Recognition</h3>
-                    <p>To understand human activity by identifying individual body part actions and their interaction with neighbouring objects. Uses Open‐
+                    <p style = "text-align: justify;>To understand human activity by identifying individual body part actions and their interaction with neighbouring objects. Uses Open‐
                         Pose for Keypoint detection and Tensorflow Object Detection API for person detection.</p>
                     <a href="https://github.com/paarthbir77/Activity-Recognition-with-Part-States">View Project</a>
                 </div>
@@ -253,7 +253,7 @@
                 <!-- End .project-image -->
                 <div class="project-info">
                     <h3>Food Allergy Warning Application</h3>
-                    <p>
+                    <p style = "text-align: justify;>
                         Android Application to identify food item from captured image. Used to warn users from potential allergy attacks based on identified dish's common
                         ingredients and user settings. Patent Application number: 202011016209 .
                     </p>
@@ -270,7 +270,7 @@
                 <!-- End .project-image -->
                 <div class="project-info">
                     <h3>ZINE Android App</h3>
-                    <p>
+                    <p style = "text-align: justify;>
                         Android application designed for Zine Workshop'18 of MNIT Jaipur.
                         Implemented Firebase Cloud Messaging, open source libraries, and Inserting Data in MySQL Database with the use
                         of Volley Library in Java framework.
@@ -283,7 +283,7 @@
             <div class="project shadow-large no-image">
                 <div class="project-info">
                     <h3>Blood Donation Drive Android Application</h3>
-                    <p>Android Application to collect essential information from blood donation volunteers for Thalassemia patients from districts
+                    <p style = "text-align: justify;>Android Application to collect essential information from blood donation volunteers for Thalassemia patients from districts
                         of Faridabad and Palwal for organizing a blood donation drive in compliance with social distancing due to COVID-19 outbreak.</p>
                     <a href="https://drive.google.com/drive/folders/1WBZvpuVbxb_OHWrI71NtvSOLezpfntq9?usp=sharing">Media Coverage</a>
                 </div>
@@ -292,7 +292,7 @@
             <div class="project shadow-large no-image">
                 <div class="project-info">
                     <h3>Robotics</h3>
-                    <p>
+                    <p style = "text-align: justify;>
                         Autonomous bot to sort blocks of different colours in a pattern defined by identifying the colours while
                         simultaneously moving across stacks using line following.Additional projects using Arduino including
                         Line Follower, Light Follower, Maze Solver, etc.
@@ -304,7 +304,7 @@
     </div>
 </div>
 <!-- End #projects -->
-<div id="publications" style = "text-align: justify;">
+<div id="publications" ">
     <h2 class="heading">Publications</h2>
     <div class="container">
         <div class="row">
@@ -312,7 +312,7 @@
                 <div class="project-info">
                     <h3>Transfer Learning based Tomato Leaf Disease Detection for mobile applications</h3>
                     <h4>2020 IEEE INTERNATIONAL CONFERENCE ON COMPUTING, POWER AND COMMUNICATION TECHNOLOGIES (GUCON)</h4>
-                    <p>
+                    <p style = "text-align: justify;>
                         The paper aims to use transfer learning using pre-trained EfficientNetB0, MobileNetV2 and VGG 19
                         models as feature extractors for classifying tomato leaf images to detect diseases on mobile devices at reduced costs.
                         Performance also compared on segmented leaf dataset.
@@ -324,7 +324,7 @@
                 <div class="project-info">
                     <h3>A Review on Medical Image Analysis with Convolutional Neural Networks</h3>
                     <h4>2020 IEEE INTERNATIONAL CONFERENCE ON COMPUTING, POWER AND COMMUNICATION TECHNOLOGIES (GUCON)</h4>
-                    <p>
+                    <p style = "text-align: justify;>
                         The review introduces a few popular algorithms using Convolutional Neural Networks(CNNs) being used in medical image analysis along with their applications:
                         Classification, Detection, Segmentation, Registration and Image Enhancement.
                     </p>
@@ -336,7 +336,7 @@
                 <div class="project-info">
                     <h3>A novel Mobile based hybrid Skin tone Classification algorithm for Cancer detection</h3>
                     <h4>INTERNATIONAL CONFERENCE ON RECENT DEVELOPMENTS IN SCIENCE, ENGINEERING AND TECHNOLOGY (REDSET 2019) </h4>
-                    <p>
+                    <p style = "text-align: justify;>
                         A novel mobile based method to use a single image captured from a smartphone and classify the input image as cancerous or non- cancerous.
                     </p>
                     <a href="https://doi.org/10.1007/978-981-15-5827-6_19">View Publication</a>
