--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
         <div class="row">
             
             <div class="project shadow-large">
-                <div class="project-image" style="margin-right: 20px; ">
-                    <img src="images/connect.png" style="height: auto; width: 100px;" />
+                <div class="project-image">
+                    <img src="images/connect.png" />
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
                     <h3>CONNECT Web Application</h3>
-                    <p >
+                    <p style="text-align: justify;">
                         Spring Boot based application designed to encourage productivity and meaningful connections among its users.
                         Implemented functionality related to user accounts, posts and activities to replicate social media. Implemented groups and leaderboards to encourage collaboration and competition.
                     </p>
@@ -240,7 +240,7 @@
             <div class="project shadow-large no-image">
                 <div class="project-info">
                     <h3>Human Activity Recognition</h3>
-                    <p>To understand human activity by identifying individual body part actions and their interaction with neighbouring objects. Uses Open‐
+                    <p style="text-align: justify;">To understand human activity by identifying individual body part actions and their interaction with neighbouring objects. Uses Open‐
                         Pose for Keypoint detection and Tensorflow Object Detection API for person detection.</p>
                     <a href="https://github.com/paarthbir77/Activity-Recognition-with-Part-States">View Project</a>
                 </div>
