--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <!-- End .project-image -->
                 <div class="project-info">
                     <h3>Food Allergy Warning Application</h3>
-                    <p>
+                    <p style="text-align: justify;">
                         Android Application to identify food item from captured image. Used to warn users from potential allergy attacks based on identified dish's common
                         ingredients and user settings. Patent Application number: 202011016209 .
                     </p>
@@ -270,7 +270,7 @@
                 <!-- End .project-image -->
                 <div class="project-info">
                     <h3>ZINE Android App</h3>
-                    <p >
+                    <p style="text-align: justify;">
                         Android application designed for Zine Workshop'18 of MNIT Jaipur.
                         Implemented Firebase Cloud Messaging, open source libraries, and Inserting Data in MySQL Database with the use
                         of Volley Library in Java framework.
@@ -283,7 +283,7 @@
             <div class="project shadow-large no-image">
                 <div class="project-info">
                     <h3>Blood Donation Drive Android Application</h3>
-                    <p >Android Application to collect essential information from blood donation volunteers for Thalassemia patients from districts
+                    <p style="text-align: justify;">Android Application to collect essential information from blood donation volunteers for Thalassemia patients from districts
                         of Faridabad and Palwal for organizing a blood donation drive in compliance with social distancing due to COVID-19 outbreak.</p>
                     <a href="https://drive.google.com/drive/folders/1WBZvpuVbxb_OHWrI71NtvSOLezpfntq9?usp=sharing">Media Coverage</a>
                 </div>
@@ -292,7 +292,7 @@
             <div class="project shadow-large no-image">
                 <div class="project-info">
                     <h3>Robotics</h3>
-                    <p >
+                    <p style="text-align: justify;">
                         Autonomous bot to sort blocks of different colours in a pattern defined by identifying the colours while
                         simultaneously moving across stacks using line following.Additional projects using Arduino including
                         Line Follower, Light Follower, Maze Solver, etc.
