--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <div class="project-info">
                     <h3>Transfer Learning based Tomato Leaf Disease Detection for mobile applications</h3>
                     <h4>2020 IEEE INTERNATIONAL CONFERENCE ON COMPUTING, POWER AND COMMUNICATION TECHNOLOGIES (GUCON)</h4>
-                    <p >
+                    <p style="text-align: justify;">
                         The paper aims to use transfer learning using pre-trained EfficientNetB0, MobileNetV2 and VGG 19
                         models as feature extractors for classifying tomato leaf images to detect diseases on mobile devices at reduced costs.
                         Performance also compared on segmented leaf dataset.
@@ -324,7 +324,7 @@
                 <div class="project-info">
                     <h3>A Review on Medical Image Analysis with Convolutional Neural Networks</h3>
                     <h4>2020 IEEE INTERNATIONAL CONFERENCE ON COMPUTING, POWER AND COMMUNICATION TECHNOLOGIES (GUCON)</h4>
-                    <p >
+                    <p style="text-align: justify;">
                         The review introduces a few popular algorithms using Convolutional Neural Networks(CNNs) being used in medical image analysis along with their applications:
                         Classification, Detection, Segmentation, Registration and Image Enhancement.
                     </p>
@@ -336,7 +336,7 @@
                 <div class="project-info">
                     <h3>A novel Mobile based hybrid Skin tone Classification algorithm for Cancer detection</h3>
                     <h4>INTERNATIONAL CONFERENCE ON RECENT DEVELOPMENTS IN SCIENCE, ENGINEERING AND TECHNOLOGY (REDSET 2019) </h4>
-                    <p >
+                    <p style="text-align: justify;">
                         A novel mobile based method to use a single image captured from a smartphone and classify the input image as cancerous or non- cancerous.
                     </p>
                     <a href="https://doi.org/10.1007/978-981-15-5827-6_19">View Publication</a>
