--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
 
 
             <div class="project shadow-large">
-                <div class="project-image">
+                <div class="project-image" style = "padding-top: 30px; padding-bottom: 30px;">
                     <img src="images/zine.png" />
                 </div>
                 <!-- End .project-image -->
-                <div class="project-info">
+                <div class="project-info" style = "padding-top: 30px; padding-bottom: 30px;">
                     <h3>ZINE Android App</h3>
                     <p style="text-align: justify;">
                         Android application designed for Zine Workshop'18 of MNIT Jaipur.
